# simc

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  123  2h-debug70.simc  2h_report.html  CLICK_ME_TO_RUN.bat  CMakeLists.txt  CMakeLists.txt.old  CONTRIBUTING.md  Caster_T7.simcraft  Caster_T7.txt  Caster_T7_Base_Gear.simcraft  Death_Knight_T8_51_00_20.simcraft  Death_Knight_Test.simcraft  Deathknight_T7.simcraft  Deathknight_T8.simcraft  Deathknight_T9.simcraft  Dockerfile  Druid_T7.simcraft  Druid_T7.txt  Druid_T7_00_55_16.simcraft  Druid_T7_00_55_16_M.simcraft  Druid_T7_00_55_26.simcraft  Druid_T7_58_00_13_SF.simcraft  Druid_T7_58_00_13_SF.txt  Druid_T7_58_00_13_W.simcraft  Druid_T7_58_00_13_W.txt  Druid_T7_58_00_13_W_FF.simcraft  Druid_T7_58_00_13_W_FF.txt  Druid_T8.simcraft  Druid_T8_00_55_16.simcraft  Druid_T8_00_55_16_M.simcraft  Druid_T8_58_00_13.html  Druid_T8_58_00_13.simcraft  Druid_T8_58_00_13_PTR.simcraft  (+445 more)
engine/: CMakeLists.txt  Makefile  config.hpp  data_definitions.hh  data_enums.hh  jom_disc.simc  jom_holy.simc  save_Honig.simc  sc_absorb.cpp  sc_action.cpp  sc_action_state.cpp  sc_armory.cpp  sc_attack.cpp  sc_battle_net.cpp  sc_bcp_api.cpp  sc_buff.cpp  sc_chardev.cpp  sc_chart.cpp  sc_class_spells.inc  sc_class_spells_ptr.inc  sc_const_data.cpp  sc_consumable.cpp  sc_cooldown.cpp  sc_data.cpp  sc_data.h  sc_data_access.cpp  sc_data_access.h  sc_death_knight.cpp  sc_dot.cpp  sc_druid.cpp  sc_enchant.cpp  sc_enums.hpp  sc_event.cpp  sc_expressions.cpp  sc_extra_data.inc  sc_extra_data_ptr.inc  sc_gear_stats.cpp  sc_generic.hpp  sc_harmful_spell.cpp  sc_heal.cpp  (+74 more)
engine/action/: absorb.cpp  absorb.hpp  action.cpp  action.hpp  action_callback.cpp  action_callback.hpp  action_state.cpp  action_state.hpp  attack.cpp  attack.hpp  dbc_proc_callback.cpp  dbc_proc_callback.hpp  dot.cpp  dot.hpp  heal.cpp  heal.hpp  parse_buff_effects.hpp  parse_effects.cpp  parse_effects.hpp  residual_action.cpp  residual_action.hpp  sc_absorb.cpp  sc_action.cpp  sc_action.hpp  sc_action_state.cpp  sc_action_state.hpp  sc_attack.cpp  sc_distance_targeting.cpp  sc_dot.cpp  sc_harmful_spell.cpp  sc_heal.cpp  sc_sequence.cpp  sc_spell.cpp  sc_spell_base.cpp  sc_stats.cpp  sequence.cpp  sequence.hpp  snapshot_stats.cpp  snapshot_stats.hpp  spell.cpp  (+5 more)
engine/buff/: buff.cpp  buff.hpp  sc_buff.cpp  sc_buff.hpp
engine/class_modules/: class_module.hpp  plumage  sc_class_modules.cpp  sc_class_modules.hpp  sc_death_knight.cpp  sc_demon_hunter.cpp  sc_demon_hunter_live.inc  sc_druid.cpp  sc_enemy.cpp  sc_evoker.cpp  sc_hunter.cpp  sc_hunter_live.inc  sc_mage.cpp  sc_mage_live.inc  sc_monk.cpp  sc_paladin.cpp  sc_paladin_retribution.cpp  sc_priest.cpp  sc_priest.hpp  sc_priest_pets.cpp  sc_rogue.cpp  sc_rogue_live.inc  sc_shaman.cpp  sc_warlock.cpp  sc_warlock.cpp.autosave  sc_warlock.hpp  sc_warlock_pets.cpp  sc_warrior.cpp
engine/dbc/: active_spells.cpp  active_spells.hpp  azerite.cpp  azerite.hpp  character_loadout.cpp  character_loadout.hpp  client_data.cpp  client_data.hpp  client_hotfix_entry.cpp  client_hotfix_entry.hpp  covenant_data.cpp  covenant_data.hpp  data_definitions.hh  data_enums.hh  dbc.hpp  embellishment_data.cpp  embellishment_data.hpp  expected_stat.cpp  expected_stat.hpp  gem_data.cpp  gem_data.hpp  item.cpp  item_armor.cpp  item_armor.hpp  item_bonus.cpp  item_bonus.hpp  item_child.cpp  item_child.hpp  item_data.cpp  item_data.hpp  item_database.hpp  item_effect.cpp  item_effect.hpp  item_import.cpp  item_import.hpp  item_import_ptr.cpp  item_import_ptr.hpp  item_naming.cpp  item_naming.hpp  item_runeforge.cpp  (+57 more)
engine/interfaces/: bcp_api.cpp  bcp_api.hpp  sc_armory.cpp  sc_battle_net.cpp  sc_bcp_api.cpp  sc_chardev.cpp  sc_http.cpp  sc_http.hpp  sc_http_curl.cpp  sc_http_curl.hpp  sc_http_wininet.cpp  sc_http_wininet.hpp  sc_js.cpp  sc_js.hpp  sc_mmo_champion.cpp  sc_rawr.cpp  sc_wowhead.cpp  sc_wowhead.hpp  sc_xml.cpp  wowhead.cpp  wowhead.hpp
engine/item/: enchants.cpp  enchants.hpp  item.cpp  item.hpp  item_targetdata_initializer.cpp  item_targetdata_initializer.hpp  special_effect.cpp  special_effect.hpp
engine/player/: action_priority_list.cpp  action_priority_list.hpp  action_variable.cpp  action_variable.hpp  actor.cpp  actor.hpp  actor_pair.hpp  actor_target_data.cpp  actor_target_data.hpp  artifact_data.cpp  artifact_data.hpp  assessor.hpp  azerite_data.cpp  azerite_data.hpp  consumable.cpp  consumable.hpp  covenant.cpp  covenant.hpp  darkmoon_deck.cpp  darkmoon_deck.hpp  effect_callbacks.cpp  effect_callbacks.hpp  expansion_effects.hpp  gear_stats.hpp  ground_aoe.cpp  ground_aoe.hpp  instant_absorb.cpp  instant_absorb.hpp  parse_auras.hpp  parse_buff_effects.hpp  parse_player_effects.hpp  pet.cpp  pet.hpp  pet_spawner.hpp  pet_spawner_impl.hpp  player.cpp  player.hpp  player_collected_data.hpp  player_demise_event.hpp  player_event.cpp  (+54 more)
engine/rapidjson/: document.h
engine/report/: charts.cpp  charts.hpp  color.cpp  color.hpp  decorators.cpp  decorators.hpp  gear_weights.cpp  gear_weights.hpp  highchart.cpp  highchart.hpp  report_helper.cpp  report_helper.hpp  report_html_sim.cpp  (+19 more)
qt/: .gitignore  CMakeLists.txt  EnumeratedTab.cpp  EnumeratedTab.hpp  Error.html  ImportTab.cpp  ImportTab.hpp  MainWindow.cpp  MainWindow.hpp  SC_OptionsTab.hpp  SC_SpellQueryTab.hpp  Simulationcraft.plist  SparkleInfo.plist  WebEngineConfig.hpp  WebPage.cpp  WebPage.hpp  WebView.cpp  WebView.hpp  Welcome.html  eu-realmlist.json  fix_qt51_osx_paths.sh  kr-realmlist.json  main.cpp  mainwindow.cpp  mainwindow.h  osx_release.sh  sc_AddonImportTab.cpp  sc_AddonImportTab.hpp  sc_AutomationTab.cpp  sc_AutomationTab.hpp  sc_ImportTab.cpp  sc_ImportThread.cpp  sc_OptionsTab.cpp  sc_OptionsTab.hpp  sc_PaperDoll.cpp  sc_PaperDoll.hpp  sc_SampleProfilesTab.cpp  sc_SampleProfilesTab.hpp  sc_SimulateTab.cpp  sc_SimulateTab.hpp  (+38 more)
tests/: CMakeLists.txt  classes.bats  covenants.bats  enemies.bats  helper.py  requirements.txt  run.py  run.sh  sc_rng.vcxproj  talent_options  talent_options.py  talents.bats  test_helper.bash  trinket_profiles
(+5690 files in other folders)
